[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "git-provenance"
version = "1.0.0"
description = "AI Governance & IP Compliance Firewall for Git"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Varun Meda", email = "varunmeda95@gmail.com" }]
keywords = ["git", "ai-governance", "compliance", "provenance", "ip-policy", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
git-provenance = "core:main"

[project.urls]
Homepage = "https://github.com/VMaroon95/git-provenance"
Issues = "https://github.com/VMaroon95/git-provenance/issues"
